k8s/deploy.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: linkerd-sweep-webhook
webhooks:
  - name: linkerd-sweep.default.svc
    admissionReviewVersions: ["v1", "v1beta1"]
    sideEffects: None
    clientConfig:
      service:
        name: linkerd-sweep
        namespace: default
        path: "/mutate"
      caBundle: |
        LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURGekNDQWYrZ0F3SUJBZ0lRS1JTY2RhSEhX
[...]
    rules:
      - operations: [ "CREATE" ]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["jobs"]
---
kind: Service
apiVersion: v1
metadata:
  name: linkerd-sweep
spec:
  type: ClusterIP
  selector:
    app: linkerd-sweep
  ports:
  - name: https
    port: 443
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: linkerd-sweep
spec:
  selector:
    matchLabels:
      app: linkerd-sweep
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
      labels:
        app: linkerd-sweep
    spec:
      serviceAccountName: linkerd-sweep
      containers:
      - name: linkerd-sweep
        image: linkerd-sweep:latest
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - mountPath: /var/run/sweep/tls
          name: sweep-tls
          readOnly: true
      volumes:
      - name: sweep-tls
        secret:
          secretName: linkerd-sweep-k8s-tls
